[project]
dynamic = ["version"]
name = "bokeh_joystick_widget"
dependencies = [
  "bokeh"
]
requires-python = ">= 3.8"

authors = [
  {name="Danny Staple", email = "danny@orionrobots.co.uk"}
]
description = "A Bokeh on screen gesture/mouse drag based joystick widget for use in a dashboard with controls"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["bokeh", "joystick"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
