[project]
name = "tests"
version = "0.1.0"
authors = [
    {name = "Danny Staple",email = "danny@orionrobots.co.uk"}
]
requires-python = ">=3.9"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
